fix config page field ordering and alignment

--- a/stylesheets/story.css
+++ b/stylesheets/story.css
@@ -1,14 +1,14 @@
 
 .insta-zip-col1 {
   display: inline-block;
-  width: 87%;
+  width: 24%;
   margin-right:0px;
   margin-left:10px;
 }
 
 .insta-zip-col2 {
-/*  display: inline-block;*/
-  width: 48%;
+  display: inline-block;
+  width: 24%;
   margin-left:3px;
   margin-right:-15px;
 }
@@ -31,7 +31,7 @@
 
 .story_date_datebox {
 	display:inline-block;
-	width:87%;
+	width:45%;
     margin-left:10px;
 }
 
